--- a/index.html
+++ b/index.html
@@ -12,48 +12,71 @@
 </head>
 
 <body>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Cancel the order</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Are you sure about cancelling the order?
+                </div>
+                <div class="modal-footer">
+                    <button onclick="borrarCarrito()" type="button" class="btn btn-success" data-dismiss="modal">Yes, I
+                        want to cancel the
+                        order</button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">No, I want to continue adding
+                        products</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <header>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-10 title">
                     <h1>Restaurant & Lounge</h1>
                 </div>
-                <div class="col-1">
-                    <img src="./img/carrito.png" alt="">
-                </div>
-                <div class="col-1">
-                    <p>2 items</p>
-                </div>
-            </div>
-            <hr>
-            <div class="row">
                 <div class="col">
-                    <img src="./img/banner.png" alt="Banner de la pagina">
+                    <p class="numItems"><a onclick="verCanasta()" href="#"><img class src="./img/1EKrQIi.png"
+                                alt="Logo de carrito" width="50" height="50"></a> 0
+                        items</p>
                 </div>
             </div>
-            <hr>
         </div>
+        <hr>
+        <div class="row">
+            <div class="col banner">
+                <img src="./img/S8Ffdqa.png" alt="Banner de la pagina" height="400px">
+            </div>
+        </div>
+        <hr>
     </header>
     <nav>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col">
                     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link burgers" href="#">Burgers</a>
+                                <a onclick="cargarElementos()" class="nav-link burgers" href="#">Burgers</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link tacos" href="#">Tacos</a>
+                                <a onclick="cargarElementos('tacos')" class="nav-link tacos" href="#">Tacos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link salads" href="#">Salads</a>
+                                <a onclick="cargarElementos('salads')" class="nav-link salads" href="#">Salads</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link desserts" href="#">Desserts</a>
+                                <a onclick="cargarElementos('desserts')" class="nav-link desserts" href="#">Desserts</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Drinks & Sides</a>
+                                <a onclick="cargarElementos('drinks')" class="nav-link drinks" href="#">Drinks &
+                                    Sides</a>
                             </li>
                         </ul>
                     </nav>
@@ -63,19 +86,20 @@
         </div>
     </nav>
     <main>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row productTitle">
                 <div class="col">
-                    <h1>Burgers</h1>
+                    <h1 class="foodType">Burgers</h1>
                 </div>
             </div>
+            <hr>
             <div class="row productos">
             </div>
-            <hr>
         </div>
     </main>
+    <hr>
     <footer>
-
+        <h6>Contact us: +57 3102105253 - info@restaurant.com - @restaurant</h6>
     </footer>
     <script src="index.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
